--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1{
     font-weight: 700;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
-    color: white;
+    color: rgb(193, 196, 241);
     margin: 0;
     padding: 3px ;
     box-sizing: border-box;
@@ -28,7 +28,7 @@ h1{
     text-transform:uppercase;
     font-family: sans-serif;
     font-weight: 600;
-    color: rgb(4, 4, 44);
+    color: rgb(4, 4, 73);
     margin: 0 0 5px 0;
 }
 .filter select {
@@ -98,7 +98,7 @@ h1{
 div > img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
 
 .vertical{
