--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1{
     text-align: center;
     height: max-content;
     margin: 10px auto;
-    box-shadow: 0 0 2px 2px rgba(0, 0, 0, .1);
+    box-shadow: 0 0 3px 3px rgba(92, 92, 92, 0.1);
 }
 .filter p{
     font-size: 26px;
@@ -37,7 +37,7 @@ h1{
     /* height: 50px; */
     font-size: 24px;
     font-weight: 300;
-    box-shadow: 0 0 2px 2px rgba(0, 0, 0, .15);
+    box-shadow: 0 0 2px 2px rgba(131, 130, 130, 0.15);
 }
 .filter select option{
     /* font-size: 20px;
