--- a/style.css
+++ b/style.css
@@ -23,28 +23,18 @@ h1{
     margin: 10px auto;
     box-shadow: 0 0 3px 3px rgba(92, 92, 92, 0.1);
 }
-.filter p{
-    font-size: 26px;
-    text-transform:uppercase;
-    font-family: sans-serif;
-    font-weight: 600;
-    color: rgb(4, 4, 73);
-    margin: 0 0 5px 0;
-}
 .filter select {
     padding: 10px;
-    /* background-color: green; */
-    /* height: 50px; */
     font-size: 24px;
     font-weight: 300;
     box-shadow: 0 0 2px 2px rgba(131, 130, 130, 0.15);
+    color: rgb(4, 4, 44);
+}
+.filter select:focus{
+    background-color: rgb(4, 4, 44);
+    color: white;
 }
 .filter select option{
-    /* font-size: 20px;
-    display: block;
-    height: inherit; */
-    /* height: 100px;
-    width: 50px;; */
     background-color: rgb(4, 4, 44);
     text-align: center;
     color: white;
