--- a/style.css
+++ b/style.css
@@ -51,11 +51,9 @@ h1{
     box-shadow: 0 0 3px 3px rgba(0, 0, 0, .1);
     position: relative;
     box-sizing: border-box;
-    /* border: 2px solid green; */
 }
 .container > div button{
     position: absolute;
-    /* top: 50%; */
     display: none;
     transition: all 2s;
 }
@@ -64,7 +62,6 @@ h1{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    /* grid-template-columns: 100px 100px 300px 300px 300px; */
     grid-auto-rows: 150px;
     grid-gap: 10px;
     grid-auto-flow: dense;
@@ -88,7 +85,7 @@ h1{
 div > img{
     width: 100%;
     height: 100%;
-    /* object-fit: cover; */
+    object-fit: cover;
 }
 
 .vertical{
@@ -97,10 +94,6 @@ div > img{
 
 .horizontal{
     grid-column: span 2;
-    /*  */
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* box-sizing: border-box; */
 }
 
 .big{
@@ -108,5 +101,4 @@ div > img{
     grid-column: span 2;
 }
 .big button{
-    /* position: absolute; */
 }
