--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ div > img{
 .display .display-image{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 .close{
     position: absolute;
