--- a/style.css
+++ b/style.css
@@ -16,24 +16,20 @@ h1{
 
 /* filter */
 .filter{
-    width: 100% ;
     text-align: center;
-    height: max-content;
-    margin: 10px auto;
-    box-shadow: 0 0 3px 3px rgba(92, 92, 92, 0.1);
-}
-.filter select {
     padding: 10px;
     font-size: 24px;
     font-weight: 300;
-    box-shadow: 0 0 2px 2px rgba(131, 130, 130, 0.15);
+    display: block;
+    margin: 10px auto;
     color: rgb(4, 4, 44);
+    box-shadow: 0 0 5px 5px rgba(4, 4, 44, 0.3);
 }
-.filter select:focus{
+select:focus{
     background-color: rgb(4, 4, 44);
     color: white;
 }
-.filter select option{
+select option{
     background-color: rgb(4, 4, 44);
     text-align: center;
     color: white;
@@ -87,7 +83,6 @@ h1{
     background-color: rgba(0, 0, 0, .3);
 }
 
-
 div > img{
     width: 100%;
     height: 100%;
@@ -134,6 +129,11 @@ div > img{
     border: none;
     cursor: pointer;
     font-size: 16px;
-    font-weight: bolder;
-    box-shadow: 0 0 2px 2px rgba(0, 0, 0, .2);
+    font-weight: 900;
+    border: 1px solid red;
+    transition: all .5s;
+}
+.close:hover{
+    color: white;
+    background-color: red;
 }
